# ARAP-Deformation-of-Gaussian-Radiance-Fields

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
datasets/pinocchio/: cfg_args  transforms_train.json
datasets/pinocchio/point_cloud/iteration_30000/: deform.txt  point_cloud_config.txt
datasets/stripes/: cfg_args  transforms_test.json
datasets/stripes/point_cloud/iteration_30000/: point_cloud.txt  point_cloud_config.txt
include/cukd/: builder_common.h  builder_thrust.h  data.h  math.h  point_struct.h  radius.h  traverse-stack-based-radius-search.h
src/core/graphics/: Input.cpp  Input.hpp  MaterialMesh.cpp  Mesh.cpp  Mesh.hpp  MeshBufferGL.cpp  MeshBufferGL.hpp  Shader.inl  Window.cpp
src/core/graphics/resources/: imgui_default.ini
src/core/raycaster/: KdTree.hpp
src/core/scene/: CMakeLists.txt  ParseData.cpp
src/core/system/: Config.hpp
src/core/view/: FPSCamera.cpp  InteractiveCameraHandler.cpp  InteractiveCameraHandler.hpp  MultiViewManager.cpp  MultiViewManager.hpp  RenderingMode.cpp  SceneDebugView.cpp  TrackBall.cpp  TrackBall.h  ViewBase.cpp  ViewBase.hpp
src/core/view/interface/: Interface.cpp
src/projects/gaussianviewer/apps/gaussianViewer/: CMakeLists.txt  main.cpp
src/projects/gaussianviewer/renderer/: CMakeLists.txt  Deform.cpp  Deform.hpp  GaussianSurfaceRenderer.hpp  GaussianView.cpp  GaussianView.hpp  Samples.cpp  Samples.hpp  Snapshot.cpp  Snapshot.hpp  cudakdtree.cu  cudakdtree.cuh  helper.cpp  helper.hpp
src/projects/ulr/apps/ulrv2/: main.cpp
src/projects/ulr/renderer/: ULRRenderer.cpp
